[package]
name = "chez"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-full"] }
tower-livereload = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
